# irc-reboot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  freeq.db-shm  freeq.db-wal
docs/: Features.md  proposal-web-infra.md  s2s-audit.md
examples/plugins/: kurt.toml
freeq-sdk/: Cargo.toml
freeq-sdk/examples/: echo_bot.rs  framework_bot.rs
freeq-sdk/src/: bot.rs  client.rs  crypto.rs  did.rs  e2ee.rs  e2ee_did.rs  event.rs  irc.rs  lib.rs  media.rs  oauth.rs  p2p.rs  pds.rs
freeq-server/: Cargo.toml  test-client.html
freeq-server/certs/: cert.pem  key.pem
freeq-server/src/: config.rs  connection.rs  crdt.rs  db.rs  irc.rs  iroh.rs  lib.rs  main.rs  plugin.rs  s2s.rs  sasl.rs  server.rs  web.rs
freeq-server/tests/: integration.rs  s2s_acceptance.rs
freeq-site/: Procfile  app.py  deploy.sh  requirements.txt
freeq-site/.miren/: app.toml
freeq-site/templates/: about.html  base.html  connect.html  doc_page.html  docs_index.html  index.html  sdk.html
freeq-tui/: Cargo.toml
freeq-tui/src/: app.rs  editor.rs  main.rs  ui.rs
freeq-web/: Procfile  README.md  client-metadata.json  index.html  requirements.txt
freeq-web/.miren/: app.toml
irc-at-sdk/: Cargo.toml
irc-at-sdk/src/: auth.rs  client.rs  did.rs  e2ee.rs  event.rs  irc.rs  lib.rs  media.rs  oauth.rs  pds.rs
irc-at-tui/: Cargo.toml
irc-at-tui/src/: app.rs  main.rs  ui.rs
irc-server/: Cargo.toml
irc-server/src/: config.rs  connection.rs  irc.rs  iroh.rs  lib.rs  main.rs  s2s.rs  sasl.rs  server.rs
irc-server/tests/: integration.rs  s2s_acceptance.rs
