[package]
name = "freeq-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client SDK for IRC servers with AT Protocol SASL authentication"

[dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
k256 = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
signature = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
iroh = { workspace = true }
iroh-quinn = { workspace = true }
open = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }
