[package]
name = "freeq-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IRC server with AT Protocol SASL authentication"

[lib]
name = "freeq_server"
path = "src/lib.rs"

[[bin]]
name = "freeq-server"
path = "src/main.rs"

[dependencies]
freeq-sdk = { path = "../freeq-sdk" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
iroh = { workspace = true }
sha2 = { workspace = true }
percent-encoding = { workspace = true }
iroh-quinn = { workspace = true }
automerge = { workspace = true }
toml = "0.8"

[dev-dependencies]
freeq-sdk = { path = "../freeq-sdk" }
rcgen = "0.13"
tempfile = "3"
